build project and run tests with new Java 21 LTS Version: - set toolkit version of all modules to 21 - add "release" flag to 'compileJava' task to generate backwards-compatible Java 17 bytecode binaries - update Gradle to newest 8.8 version (also in GitHub actions) - add JVM argument to 'test' task allowing security manager usage   (needed for `stefanbirkner:system-lambda` dependency and testing System::exit)